:art: add meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,37 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>IG-Frame</title>
+	<!-- Primary Meta Tags -->
+  <title>Instagram Frame Generator | IG-Frame</title>
+  <meta name="title" content="Instagram Frame Generator | IG-Frame">
+  <meta name="description" content="Add a Photo Frame with Custom text to your Photo for Instagram">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ig-frame.vercel.app/">
+  <meta property="og:title" content="Instagram Frame Generator | IG-Frame">
+  <meta property="og:description" content="Add a Photo Frame with Custom text to your Photo for Instagram">
+  <meta property="og:image" content="https://ig-frame.vercel.app/cover.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://ig-frame.vercel.app/">
+  <meta property="twitter:title" content="Instagram Frame Generator | IG-Frame">
+  <meta property="twitter:description" content="Add a Photo Frame with Custom text to your Photo for Instagram">
+  <meta property="twitter:image" content="https://ig-frame.vercel.app/cover.jpg">
 
   <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
+  <link rel="apple-touch-icon" href="/icon/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/icon/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/icon/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/icon/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/icon/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="/icon/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/icon/apple-touch-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon-180x180.png" />
 	<link rel='stylesheet' href='/build/bundle.css'>
   
 	<script defer src='/build/bundle.js'></script>
